force-app/main/default/objects/ScheduleSetting__mdt/ScheduleSetting__mdt.object-meta.xml
<CustomObject>
    <description
	>Provus application settings regarding standard resource sheduling factors such as hours in a standard work week which may vary from one organization to another based on a number of factors</description>
    <label>Schedule Setting</label>
    <pluralLabel>Schedule Settings</pluralLabel>
</CustomObject>