force-app/main/default/objects/ScheduleSetting__mdt/fields/ProvusSetupId__c.field-meta.xml
<CustomField>
    <fullName>ProvusSetupId__c</fullName>
    <description
	>Relationship of schedule setting custom metadata record to parent Provus setup custom metadata record</description>
    <inlineHelpText
	>Relationship of schedule setting record to parent Provus setup record</inlineHelpText>
    <label>Provus Setup</label>
    <referenceTo>ProvusSetup__mdt</referenceTo>
    <relationshipLabel>Schedule Settings</relationshipLabel>
    <relationshipName>Schedule_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>