force-app/main/default/objects/ScheduleSetting__mdt/fields/StandardDayHours__c.field-meta.xml
<CustomField>
    <fullName>StandardDayHours__c</fullName>
    <description
	>Number of hours in a work day generally considered to be normal for your organization</description>
    <inlineHelpText
	>Number of hours in a work day generally considered to be normal for your organization</inlineHelpText>
    <label>Hours in a standard day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>