force-app/main/default/objects/ScheduleSetting__mdt/fields/StandardWeekHours__c.field-meta.xml
<CustomField>
    <fullName>StandardWeekHours__c</fullName>
    <description
	>Number of hours in a work week generally considered to be normal for your organization</description>
    <inlineHelpText
	>Number of hours in a work week generally considered to be normal for your organization</inlineHelpText>
    <label>Hours in a standard week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>