force-app/main/default/objects/ScheduleSetting__mdt/fields/StandardYearHours__c.field-meta.xml
<CustomField>
    <fullName>StandardYearHours__c</fullName>
    <description
	>Number of working hours in a year generally considered to be normal for your organization</description>
    <inlineHelpText
	>Number of working hours in a year generally considered to be normal for your organization</inlineHelpText>
    <label>Hours in a standard year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>